fix: Now the routes of the api are correctly designed using restful apis conventions
